<resources>
    <string name="link_market" translatable="false">market://details?id=ru.russianbravedev.dotamania</string>
    <string name="app_name">Dotamania</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_show_hero">ShowHero</string>
    <string name="heroname">Hero name</string>
    <string name="herostatus">Hero status</string>
    <string name="herodescription">Hero description</string>
    <string name="atribute">Атрибут</string>
    <string name="value">Значение</string>
    <string name="title_activity_items">ItemsActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_accordion">Accordion</string>
    <string name="itemsrashod">Расходуемые</string>
    <string name="atributes">Атрибуты</string>
    <string name="armament">Вооружение</string>
    <string name="mystic">Мистика</string>
    <string name="shared">Общее</string>
    <string name="support">Поддержка</string>
    <string name="magic">Магия</string>
    <string name="wearpon">Оружие</string>
    <string name="armor">Броня</string>
    <string name="artefacts">Артефакты</string>
    <string name="secretmarket">Секретная лавка</string>
    <string name="mmicons">Main menu icons</string>
    <string name="info">Инфо</string>
    <string name="items">Предметы</string>
    <string name="like">Like</string>
    <string name="mail">Написать</string>
    <string name="neutrals">Крипы</string>
    <string name="steam">Стим</string>
    <string name="tactics">Тактика</string>
    <string name="title_activity_main_menu">Главное меню</string>
    <string name="title_activity_choise_lang">Выбор языка</string>
    <string name="title_activity_neutrals">Крипы</string>
    <string name="title_activity_tactics">Тактика</string>
    <string name="title_activity_mail">Написать</string>
    <string name="title_activity_like">Like</string>
    <string name="title_activity_info">Инфо</string>
    <string name="title_activity_heroes">Герои</string>
    <string name="heroes">Герои</string>
    <string name="hello_world">Hello world!</string>
    <string name="mana">Мана</string>
    <string name="cooldown">Кулдаун</string>
    <string name="level">Уровень</string>
    <string name="health">Здоровье</string>
    <string name="damage">Урон</string>
    <string name="armor1">Защита</string>
    <string name="herodistviewdn">Дальность обзора (день/ночь)</string>
    <string name="herodistattack">Дальность атаки</string>
    <string name="herospeedattack">Скорость атаки</string>
    <string name="strength">Сила</string>
    <string name="agility">Ловкость</string>
    <string name="intellegency">Интеллект</string>
    <string name="title_activity_steam">Steam</string>
    <string name="heroabout">О герое</string>
    <string name="herohowtoplay">Как играть</string>
    <string name="herouseditems">Используемые предметы</string>
    <string name="heroadvice">Полезные советы</string>
    <string name="herofacts">Интересные факты</string>
    <string name="biography">Биография</string>
    <string name="skills">Скилы</string>
    <string name="guides">Гайды</string>
    <string name="cost">Стоимость:</string>
    <string name="comment">Примечание:</string>
    <string name="consists_of">Состоит из:</string>
    <string name="included">Нужен для:</string>
    <string name="title_activity_show_item">ShowItem</string>
    <string name="title_activity_tactics_info">TacticsInfo</string>
    <string name="creps_description">Крипы? — разновидность существ в Dota 2, с которыми герои могут взаимодействовать, но не могут непосредственно контролировать по умолчанию (см. Chen, Enchantress и Helm of the Dominator). Существует два типа крипов: союзные войска и нейтральные крипы, за убийство которых игроки получают золото и опыт.</string>
    <string name="neutral_units">Нейтральные войска</string>
    <string name="allied_troops">Союзные войска</string>
    <string name="title_activity_creps_at">CrepsAT</string>
    <string name="title_activity_creps_nu">CrepsNU</string>
    <string name="statistic">Статистика</string>
    <string name="exp_killing">Опыт за убийство</string>
    <string name="gold_killing">Золото за убийство</string>
    <string name="creps_neutals_description">ОБЩЕЕ
Нейтральные крипы — более сильные и опасные существа, появляющиеся в лесу. Они 
не принадлежат ни к одной из фракций и являются альтернативным источником добычи 
золота и опыта. Герои могут сосредоточиться на убийстве нейтральных монстров, 
качаясь в лесу. Также некоторые нейтральные монстры обладают специальными 
способностями. Герои вроде Doom Doom могут использовать эти способности, 
применяя их против врагов, или же для своей выгоды. Рошан также считается 
нейтральным крипом.\n\nМЕХАНИКА
Нейтральные крипы появляются каждую минуту, начиная с 30-й секунды игры. 
Рассерженные монстры покидают свой лагерь и преследуют обидчиков в течение 7 
секунд, после чего вновь возвращаются в лагерь. Эту задержку возвращения можно 
использовать для отвода крипов, что заставляет нейтральных крипов сражаться с 
союзными, или же для нагромождения крипов, что позволяет иметь более одной пачки 
крипов в одном лагере.
Нейтральные крипы не будут появляться, если в их лагере имеются крипы, герои, 
варды или же некоторые снаряды вроде Homing Missile Gyrocopter.
Лес каждой из фракций состоит из одного лагеря маленьких монстров, двух лагерей 
средних монстров и двух лагерей больших монстров. Также в лесу нашли свое 
пристанище древние монстры. В среднем за зачистку леса (не считая древних лагерей) 
будет получено 513 ед. золота и 977 ед. опыта.</string>
    <string name="map_place">Место на карте</string>
    <string name="title_activity_about">О приложении</string>
    <string name="createtitle">Создано:</string>
    <string name="contactstitle">Контакты:</string>
    <string name="redeyesstudio" translatable="false">BraveDev Studio</string>
    <string name="emailstudio" translatable="false">bravedevrus@gmail.com</string>
    <string name="abouttext" translatable="false">Legal Disclaimer:\nTHIS GUIDE IS NOT CREATED, SPONSORED OR ENDORSED BY VALVE CORP. This guide is not an official guide or connected to the game\'s developer or publisher. All in-game descriptions, characters, locations, imagery and videos of game content are copyright and or trademarked to their respective owners and usage for this game guide falls within fair use guidelines. This guide is intended purely for the love of the game and aid further skill development and exploration of the game.</string>
    <string name="sendmessage">Отправляйте нам свои пожелания и замечания</string>
    <string name="sendmessagetheme">Тема сообщения</string>
    <string name="sendmessagetext">Текст сообщения</string>
    <string name="sendmessagebut">Отправить</string>
    <string name="store">Магазин</string>
    <string name="inventory">Инвентарь</string>
    <string name="matchhistory">История\nматчей</string>
    <string name="title_activity_steam_inventary">SteamInventary</string>
    <string name="title_activity_steam_store">SteamStore</string>
    <string name="title_activity_show_store_item">ShowStoreItem</string>
    <string name="item_quality">Качество:</string>
    <string name="min_level">Минимальный уровень:</string>
    <string name="max_level">Максимальный уровень:</string>
    <string name="capabilities">Возможности:</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="cap_can_craft_mark">Может обработать след:</string>
    <string name="cap_can_be_restored">Может быть восстановлен:</string>
    <string name="cap_strange_parts">Странные детали:</string>
    <string name="cap_paintable_unusual">Необычная окраска:</string>
    <string name="cap_autograph">Автограф:</string>
    <string name="cap_can_consume">Можно употребить:</string>
    <string name="type">Тип:</string>
    <string name="enteridorname">Введите имя пользователя или ID:</string>
    <string name="title_activity_show_account_items">ShowAccountItems</string>
    <string name="errorenteridorname">Введите имя или ID</string>
    <string name="errorcheckidorname">Данные неверны или пользователя не существует</string>
    <string name="steamkey">86E1E2B867B522C67E19E00B8E852552</string>
    <string name="timeouterror">Время ожидания ответа вышло. Повторите попытку.</string>
    <string name="erroraccount">Информация о пользователе не найдена</string>
    <string name="title_activity_match_history">MatchHistory</string>
    <string name="entermatchid">Введите ID матча</string>
    <string name="title_activity_show_match_history">ShowMatchHistory</string>
    <string name="date">Дата: </string>
    <string name="gridmatchheroes">Персонажи: </string>
    <string name="title_activity_show_match_info">ShowMatchInfo</string>
    <string name="radiant">Свет</string>
    <string name="dire">Тьма</string>
    <string name="radianwin">Победа сил света</string>
    <string name="direwin">Победа сил тьмы</string>
    <string name="matchduration">Продолжительность: </string>
    <string name="playerlevel">Уровень: </string>
    <string name="playerkills">Убийств: </string>
    <string name="playerdeaths">Умер: </string>
    <string name="playerassists">Помощь: </string>
    <string name="playergold">Золото: </string>
    <string name="playerlasthists">Последние\n хиты: </string>
    <string name="playerdenies">Отказов: </string>
    <string name="playergoldmin">Золото/мин: </string>
    <string name="playerxpmin">XP/мин: </string>
    <string name="title_activity_steam_inventory">SteamInventory</string>
    <string name="steamnews">Новости</string>
    <string name="errornews">Ошибка чтения новостей</string>
    <string name="author">Автор: </string>
    <string name="title_activity_steam_news">SteamNews</string>
    <string name="title_activity_show_steam_news">ShowSteamNews</string>
    <string name="showvideo">Показать видео</string>
    <string name="startitems">Стартовые предметы</string>
    <string name="firstitems">Начальные предметы</string>
    <string name="mainitems">Основные предметы</string>
    <string name="caseitems">По ситуации предметы</string>
    <string name="youlanguage">Выбранный язык: Русский</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="title_activity_dota_buff_info">DotaBuffInfo</string>
    <string name="loading">Загрузка</string>
    <string name="waitloading">Пожалуйста подождите</string>
    <string name="title_activity_dota_buff_menu">DotaBuffMenu</string>
    <string name="matches">Матчи</string>
    <string name="players">Игроки</string>
    <string name="title_activity_dota_items_game">DotaItemsGame</string>
    <string name="title_activity_services">Services</string>
    <string name="services">Сервисы</string>
    <string name="wallpaper">Обои</string>
    <string name="funny">Приколы</string>
    <string name="teams">Команды</string>
    <string name="title_activity_funny_menu">FunnyMenu</string>
    <string name="video">Видео</string>
    <string name="game">Игра</string>
    <string name="pictures">Картинки</string>
    <string name="title_activity_wallpapers">Wallpapers</string>
    <string name="title_activity_show_wallpaper">ShowWallpaper</string>
    <string name="saveimage">Сохранить</string>
    <string name="attachto">Установить как</string>
    <string name="galerysuccess">Изображение сохранено</string>
    <string name="title_activity_funny_picts">FunnyPicts</string>
    <string name="servicenotavailable">Сервис временно не доступен</string>
    <string name="servicehost" translatable="false">http://95.31.31.165:9000</string>
    <string name="langenus">English</string>
    <string name="langruru">Русский</string>
    <string name="langeses">Español</string>
    <string name="langzhcn">中国的</string>
</resources>