<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ShowStoreItem" >

    <TextView
        android:id="@+id/storeItemName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="#fff"
        android:textSize="26sp" />

    <ImageView
        android:id="@+id/storeItemImageLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="#f00"
        android:padding="5dp" />

    <TextView
        android:id="@+id/storeItemDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_quality"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        	android:textColor="#fff"
            android:text="@string/item_quality" />

        <TextView
            android:id="@+id/storeItemQuality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
	        android:textColor="#fff" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min_level"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/storeMinLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff" />
    </LinearLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min_level"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/storeMaxLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff" />
    </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capabilities"
            android:textColor="#fff"
            android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cap_can_craft_mark"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/cap_can_craft_mark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cap_can_be_restored"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/cap_can_be_restored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cap_strange_parts"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/cap_strange_parts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cap_paintable_unusual"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/cap_paintable_unusual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cap_autograph"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/cap_autograph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff" />

    </LinearLayout>

	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cap_can_consume"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/cap_can_consume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff" />

    </LinearLayout>
            
</LinearLayout>
