<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f00"
        android:padding="1dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#1a1a1a"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/heroImageMatchHistory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:src="@drawable/phantom_lancer_full" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/gridPlayersInfoSteamName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#fff" />

                    <TextView
                        android:id="@+id/gridPlayersInfoHeroName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#fff" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/playerlevel"
                            android:textColor="#fff" />

                        <TextView
                            android:id="@+id/gridPlayersInfoLevel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#fff" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.33"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/playerkills"
                            android:textColor="#fff" />

                        <TextView
                            android:id="@+id/playerkills"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#fff" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/playerdeaths"
                            android:textColor="#fff" />

                        <TextView
                            android:id="@+id/playerdeaths"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#fff" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/playerassists"
                            android:textColor="#fff" />

                        <TextView
                            android:id="@+id/playerassists"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#fff" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.33"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/playergold"
                            android:textColor="#fff" />

                        <TextView
                            android:id="@+id/playergold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#fff" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/playerlasthists"
                            android:textColor="#fff" />

                        <TextView
                            android:id="@+id/playerlasthists"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#fff" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/playerdenies"
                            android:textColor="#fff" />

                        <TextView
                            android:id="@+id/playerdenies"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#fff" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.33"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/playergoldmin"
                            android:textColor="#fff" />

                        <TextView
                            android:id="@+id/playergoldmin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#fff" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/playerxpmin"
                            android:textColor="#fff" />

                        <TextView
                            android:id="@+id/playerxpmin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#fff" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
