<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
	xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:orientation="vertical"
    android:padding="0dp"
    tools:context=".ReportUs" >

    <ru.russianbravedev.dotamania.RomulTextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/romultext_view_height"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:text="@string/sendmessage"
        android:textColor="#fff"
        android:textSize="@dimen/romultext_view_size" />

    <ru.russianbravedev.dotamania.RomulTextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/romultext_view_height"
        android:background="@color/mainbuttoncolor"
        android:gravity="center"
        android:text="@string/sendmessagetheme"
        android:textColor="@color/mainbuttontextcolor"
        android:textSize="@dimen/romultext_view_size" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="1dp"
        android:background="@color/mainbuttoncolor"
        android:layout_marginTop="10dp" >

        <EditText
            android:id="@+id/themeMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1a1a1a"
            android:ems="10"
            android:textColor="#fff" >
            <requestFocus />
        </EditText>

    </RelativeLayout>

    <ru.russianbravedev.dotamania.RomulTextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/romultext_view_height"
        android:layout_marginTop="10dp"
        android:background="@color/mainbuttoncolor"
        android:gravity="center"
        android:text="@string/sendmessagetext"
        android:textColor="@color/mainbuttontextcolor"
        android:textSize="@dimen/romultext_view_size" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="1dp"
        android:background="@color/mainbuttoncolor"
        android:layout_marginTop="10dp" >

        <EditText
            android:id="@+id/textMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1a1a1a"
            android:ems="10"
            android:gravity="left|top"
            android:inputType="textMultiLine"
            android:lines="6"
            android:textColor="#fff" />

    </RelativeLayout>

    <ru.russianbravedev.dotamania.MainMenuButtons
        xmlns:customNS="http://schemas.android.com/apk/res/ru.russianbravedev.dotamania"
        android:id="@+id/sendMailButton"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal" 
	    customNS:iconmm="R.drawable.mailmm"
        customNS:titlemm="R.string.sendmessagebut"
        android:layout_width="wrap_content" />

</LinearLayout>
